        PR 10768         * dlltool.c (bfd_get_errmsg): New macro.         (scan_obj_file): Use it.         (make_one_lib_file): Use it.         (make_head): Use it.         (make_delay_head): Use it.         (make_tail): Use it.         (gen_lib_file): Use it.         (identify_dll_for_implib): Use it.         (identify_search_archive):  Use it.